<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".fragment.MainFragment">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/day_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="#0A000000"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>
    <ImageView
        android:id="@+id/imageViewOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/WeatherAppBG"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textStart">

            <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:contentDescription="@string/menu_setting"
                android:focusable="true"
                android:src="@drawable/settings_menu_dots"
                app:layout_constraintBottom_toBottomOf="@+id/cityNameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cityNameTextView"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/cityNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:text="@string/test"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/settingsIcon"
                app:layout_constraintStart_toEndOf="@+id/dateAndTimeTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateAndTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:text="14/14/2025"
                app:layout_constraintBottom_toBottomOf="@+id/cityNameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cityNameTextView" />

            <TextView
                android:id="@+id/currentTempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="14"
                android:textColor="#FFFFFF"
                android:textSize="70sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityNameTextView" />

            <TextView

                android:id="@+id/temperatureUnitCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/currentTempTextView"
                app:layout_constraintTop_toTopOf="@+id/currentTempTextView" />

            <TextView

                android:id="@+id/conditionStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/test"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/currentTempTextView"
                app:layout_constraintStart_toStartOf="@+id/currentTempTextView"
                app:layout_constraintTop_toBottomOf="@+id/currentTempTextView" />

            <TextView
                android:id="@+id/tempMaxMinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"

                android:text="14"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/conditionStatusTextView"
                app:layout_constraintStart_toStartOf="@+id/conditionStatusTextView"
                app:layout_constraintTop_toBottomOf="@+id/conditionStatusTextView"
                app:layout_constraintVertical_bias="1.0" />


            <ImageButton
                android:id="@+id/syncButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="#00FFFFFF"
                android:src="@android:drawable/ic_popup_sync"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editCityText"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/edit_city_text"
                android:cursorVisible="false"
                android:hint="@string/search_bar"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="10sp"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/syncButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tempMaxMinTextView"
                app:layout_constraintVertical_bias="0.428"
                android:autofillHints="" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:animateLayoutChanges="false"
        android:backgroundTint="#00FFFFFF"
        android:persistentDrawingCache="animation"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:tabGravity="fill"
        app:tabIndicatorAnimationMode="linear"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="bottom"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextColor="#FFFFFF"
        app:tabRippleColor="@null">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="false"



            android:text="@string/tabs_hours"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="281dp" />

        />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_days"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="-1dp" />
        />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="@+id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <View
        android:id="@+id/dim_settings_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pop_up_window_dim"
        android:visibility="gone"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>